kubernetes/infrastructure/controllers/authentik/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: authentik
  labels:
    name: authentik
    # Pod Security Admission - Authentik needs some privileges
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/warn: privileged
